--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             سلام، من <span class="text-orange"> سید سعید پرهیزکار </span> هستم
                         </h1>
                         <p class="hero-subtitle mb-4">
-                            یک طراح سایت در حوزه فرانت اند 
+                            یک طراح سایت در حوزه frontend اند 
                         </p>
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary-custom me-3">مشاهده مهارت ها</a>
@@ -121,7 +121,7 @@
                             عاشق خلق تجربیات دیجیتال زیبا و معنادار هست.
                         </p>
                         <p class="mb-4">
-                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه فرانت‌اند است. 
+                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه frontend است. 
                             من به جزئیات اهمیت می‌دهم و همیشه به دنبال راه‌حل‌های خلاقانه برای چالش‌های طراحی هستم.
                         </p>
                
