--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="social-links mt-5">
                             <!-- <a href="#" class="social-link"><i class="bi bi-github"></i></a> -->
                             <!-- <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a> -->
-                            <a href="https://www.instagram.com/_its.arshiiaa_?igsh=bnVzeWxyd2pzNnJ1 " class="social-link"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1" class="social-link"><i class="bi bi-instagram"></i></a>
                             <a href="https://t.me/saeedsinstagram" class="social-link"><i class="bi bi-telegram"></i></a>
                         </div>
                     </div>
@@ -298,9 +298,9 @@
                 </div>
                 <div class="col-lg-4 col-md-4 text-center mb-4">
                     <div class="contact-info">
-                        <a href="https://www.instagram.com/_its.arshiiaa_?igsh=bnVzeWxyd2pzNnJ1"><i class="bi bi-instagram tel"></i></a>
+                        <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1"><i class="bi bi-instagram tel"></i></a>
                         <h5>اینستاگرم</h5>
-                        <p>__its.saeed__</p>
+                        <p>__its.arshiiaa__</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center mb-4">
