Fix spacing in hero subtitle text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             سلام، من <span class="text-orange"> سید سعید پرهیزکار </span> هستم
                         </h1>
                         <p class="hero-subtitle mb-4">
-                            یک طراح سایت در حوزه frontend اند 
+                            یک طراح سایت در حوزه frontend  
                         </p>
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary-custom me-3">مشاهده مهارت ها</a>
