Update6 index.html

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="row mt-5">
                 <div class="col-lg-4 col-md-4 text-center mb-4">
                     <div class="contact-info">
-                        <a herf:"mailto:s.arshiiaa86@gmail.com"><i class="bi bi-envelope-fill tel"></i></a>
+                        <a href="mailto:s.arshiiaa86@gmail.com"><i class="bi bi-envelope-fill tel"></i></a>
                         <h5>ایمیل</h5>
                         <p>s.arshiiaa86@gmail.com</p>
                     </div>
