Update8 index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </li>
  
                     <li class="nav-item">
-                        <a class="nav-link" href="#connect">تماس</a>
+                        <a class="nav-link" href="#ertebat">تماس</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                             سلام، من <span class="text-orange"> سید سعید پرهیزکار </span> هستم
                         </h1>
                         <p class="hero-subtitle mb-4">
-                            یک طراح سایت در حوزه frontend  
+                            یک طراح سایت در حوزه فرانت اند 
                         </p>
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary-custom me-3">مشاهده مهارت ها</a>
@@ -70,7 +70,7 @@
                         <div class="social-links mt-5">
                             <!-- <a href="#" class="social-link"><i class="bi bi-github"></i></a> -->
                             <!-- <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a> -->
-                            <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1" class="social-link"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/_its.arshiiaa_?igsh=bnVzeWxyd2pzNnJ1 " class="social-link"><i class="bi bi-instagram"></i></a>
                             <a href="https://t.me/saeedsinstagram" class="social-link"><i class="bi bi-telegram"></i></a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             عاشق خلق تجربیات دیجیتال زیبا و معنادار هست.
                         </p>
                         <p class="mb-4">
-                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه frontend است. 
+                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه فرانت‌اند است. 
                             من به جزئیات اهمیت می‌دهم و همیشه به دنبال راه‌حل‌های خلاقانه برای چالش‌های طراحی هستم.
                         </p>
                
@@ -133,7 +133,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="section-padding bg-dark-section">
+    <section id="skills" class="section-padding bg-dark-section my-4 ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5">
@@ -187,107 +187,11 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <!-- <section id="projects" class="section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center mb-5">
-                    <h2 class="section-title">پروژه‌های منتخب</h2>
+<section class="container mt-5" id="ertebat">
+            <div class="row mt-5 ">
+                                <div class="col-lg-12 text-center my-4">
+                    <h2 class="section-title">راه های ارتباطی</h2>
                     <div class="title-underline"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="project-card">
-                        <div class="project-icon">
-                            <i class="bi bi-phone"></i>
-                        </div>
-                        <div class="project-content">
-                            <h4>پروژه طراحی اپلیکیشن</h4>
-                            <p>طراحی کامل UI/UX برای یک اپلیکیشن موبایل مدرن</p>
-                            <div class="project-tags">
-                                <span class="tag">UI Design</span>
-                                <span class="tag">Mobile</span>
-                            </div>
-                            <div class="mt-3">
-                                <a href="#" class="btn btn-sm btn-primary-custom">مشاهده پروژه</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="project-card">
-                        <div class="project-icon">
-                            <i class="bi bi-globe"></i>
-                        </div>
-                        <div class="project-content">
-                            <h4>وبسایت شرکتی</h4>
-                            <p>طراحی و توسعه یک وبسایت شرکتی مدرن و واکنش‌گرا</p>
-                            <div class="project-tags">
-                                <span class="tag">Web Design</span>
-                                <span class="tag">Bootstrap</span>
-                            </div>
-                            <div class="mt-3">
-                                <a href="#" class="btn btn-sm btn-primary-custom">مشاهده پروژه</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="project-card">
-                        <div class="project-icon">
-                            <i class="bi bi-cart-check"></i>
-                        </div>
-                        <div class="project-content">
-                            <h4>پلتفرم E-Commerce</h4>
-                            <p>طراحی تجربه کاربری برای یک پلتفرم خرید آنلاین</p>
-                            <div class="project-tags">
-                                <span class="tag">E-Commerce</span>
-                                <span class="tag">UX Design</span>
-                            </div>
-                            <div class="mt-3">
-                                <a href="#" class="btn btn-sm btn-primary-custom">مشاهده پروژه</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Contact Section -->
-    <!-- <section id="contact" class="section-padding bg-dark-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center mb-5">
-                    <h2 class="section-title">تماس با من</h2>
-                    <div class="title-underline"></div>
-                    <p class="mt-4">آماده همکاری در پروژه‌های جدید هستم</p>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <form class="contact-form">
-                        <div class="row">
-                            <div class="col-md-6 mb-4">
-                                <input type="text" class="form-control-custom" placeholder="نام شما" required>
-                            </div>
-                            <div class="col-md-6 mb-4">
-                                <input type="email" class="form-control-custom" placeholder="ایمیل شما" required style="direction: rtl;">
-                            </div>
-                        </div>
-                        <div class="mb-4">
-                            <input type="text" class="form-control-custom" placeholder="موضوع">
-                        </div>
-                        <div class="mb-4">
-                            <textarea class="form-control-custom" rows="5" placeholder="پیام شما" required></textarea>
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary-custom">ارسال پیام</button>
-                        </div>
-                    </form>
-                </div>
-            </div> -->
             <div class="row mt-5">
                 <div class="col-lg-4 col-md-4 text-center mb-4">
                     <div class="contact-info">
@@ -312,6 +216,7 @@
                 </div>
             </div>
         </div>
+    
     </section>
 
     <!-- Footer -->
