Update9 index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             سلام، من <span class="text-orange"> سید سعید پرهیزکار </span> هستم
                         </h1>
                         <p class="hero-subtitle mb-4">
-                            یک طراح سایت در حوزه فرانت اند 
+                            یک طراح سایت در حوزه frontend 
                         </p>
                         <div class="hero-buttons">
                             <a href="#skills" class="btn btn-primary-custom me-3">مشاهده مهارت ها</a>
@@ -70,7 +70,7 @@
                         <div class="social-links mt-5">
                             <!-- <a href="#" class="social-link"><i class="bi bi-github"></i></a> -->
                             <!-- <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a> -->
-                            <a href="https://www.instagram.com/_its.arshiiaa_?igsh=bnVzeWxyd2pzNnJ1 " class="social-link"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1" class="social-link"><i class="bi bi-instagram"></i></a>
                             <a href="https://t.me/saeedsinstagram" class="social-link"><i class="bi bi-telegram"></i></a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             عاشق خلق تجربیات دیجیتال زیبا و معنادار هست.
                         </p>
                         <p class="mb-4">
-                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه فرانت‌اند است. 
+                            تخصص من در طراحی رابط‌های کاربری، تجربه کاربری و توسعه frontend است. 
                             من به جزئیات اهمیت می‌دهم و همیشه به دنبال راه‌حل‌های خلاقانه برای چالش‌های طراحی هستم.
                         </p>
                
