--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <!-- <a href="#" class="social-link"><i class="bi bi-github"></i></a> -->
                             <!-- <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a> -->
                             <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1" class="social-link"><i class="bi bi-instagram"></i></a>
-                            <a href="https://t.me/saeedsinstagram" class="social-link"><i class="bi bi-telegram"></i></a>
+                            <a href="https://t.me/Itsaeed80" class="social-link"><i class="bi bi-telegram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -209,8 +209,8 @@
                 </div>
                 <div class="col-lg-4 col-md-4 text-center mb-4">
                     <div class="contact-info">
-                        <a href="https://t.me/saeedsinstagram"><i class="bi bi-telegram tel"></i></a>
-                        <h5> چنل تلگرام </h5>
+                        <a href="https://t.me/Itsaeed80"><i class="bi bi-telegram tel"></i></a>
+                        <h5> تلگرام </h5>
                         <p>@Itsaeed80</p>
                     </div>
                 </div>
