Update11 index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="contact-info">
                         <a href="https://t.me/Itsaeed80"><i class="bi bi-telegram tel"></i></a>
                         <h5> تلگرام </h5>
-                        <p>@Itsaeed80</p>
+                        <p>Itsaeed80@</p>
                     </div>
                 </div>
             </div>
