Update12 index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <i class="bi bi-image"></i>
                         </div>
                         <h4>ادیت تصویر</h4>
-                        <p>ادیت تصویر به صورت پی شرفته</p>
+                        <p>ادیت تصویر به صورت پیشرفته</p>
                         <div class="skill-tags">
                             <span class="tag">photoshop</span>
                         </div>
@@ -190,25 +190,25 @@
 <section class="container mt-5" id="ertebat">
             <div class="row mt-5 ">
                                 <div class="col-lg-12 text-center my-4">
-                    <h2 class="section-title">راه های ارتباطی</h2>
+                    <h2 class="section-title mt-md-5 mt-lg-4">راه های ارتباطی</h2>
                     <div class="title-underline"></div>
             <div class="row mt-5">
                 <div class="col-lg-4 col-md-4 text-center mb-4">
-                    <div class="contact-info">
+                    <div class="contact-info mt-md-5 mt-lg-4">
                         <a href="mailto:s.arshiiaa86@gmail.com"><i class="bi bi-envelope-fill tel"></i></a>
                         <h5>ایمیل</h5>
                         <p>s.arshiiaa86@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center mb-4">
-                    <div class="contact-info">
+                    <div class="contact-info mt-md-5 mt-lg-4">
                         <a href="https://www.instagram.com/___its.arshiiaa___?igsh=bnVzeWxyd2pzNnJ1"><i class="bi bi-instagram tel"></i></a>
                         <h5>اینستاگرم</h5>
                         <p>__its.arshiiaa__</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center mb-4">
-                    <div class="contact-info">
+                    <div class="contact-info mt-md-5 mt-lg-4">
                         <a href="https://t.me/Itsaeed80"><i class="bi bi-telegram tel"></i></a>
                         <h5> تلگرام </h5>
                         <p>Itsaeed80@</p>
