--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- اسم + لوگو کنار هم -->
             <a class="navbar-brand" href="#home">
                 <span class="navbar-brand-text red">s.saeed parhizkar</span>
-                <img src="media/logo.jpeg" alt="لوگو" class="navbar-logo">
+                <img src="logo.jpeg" alt="لوگو" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
