--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <div class="about-image">
                         <div class="image-card">
-                            <img src="./css/1000044442.jpg" alt="درباره من" class="about-img">
+                            <img src="./css/1766821822946.jpg" alt="درباره من" class="about-img img-fluid ">
                         </div>
                     </div>
                 </div>
